Fix issue: notifications not visible

--- a/frontend/src/global_styles/openproject/_notifications.sass
+++ b/frontend/src/global_styles/openproject/_notifications.sass
@@ -29,5 +29,16 @@
 .controller-notifications
   @include extended-content--bottom
 
+  #content-wrapper
+    padding-top: 24px
+
   #content
     height: 100%
+    padding: 24px
+    margin-bottom: 24px
+    border: 1px solid #000
+    background-color: #fff !important
+    border-radius: 33px
+
+    #content-header
+      padding: 0 !important
