--- a/frontend/src/global_styles/primer/_overrides.sass
+++ b/frontend/src/global_styles/primer/_overrides.sass
@@ -54,6 +54,7 @@ action-menu
 
 ul.SegmentedControl
   margin-left: 0
+  padding: 0
 
 /* Remove margin-left: 2rem from Breadcrumbs */
 #breadcrumb,
